feat: 상품 가격 range 검색 조건 추가, 정렬 조건 추가