@@ -2,14 +2,16 @@ package team.three.usedstroller.collector.repository;
 
 import static team.three.usedstroller.collector.domain.QProduct.product;
 
+import com.querydsl.core.types.OrderSpecifier;
 import com.querydsl.jpa.impl.JPAQuery;
 import com.querydsl.jpa.impl.JPAQueryFactory;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Repository;
 import team.three.usedstroller.collector.domain.Product;
 import team.three.usedstroller.collector.dto.FilterReq;
@@ -26,13 +28,13 @@ public class ProductRepositoryImpl implements CustomProductRepository {
 
     ProductDsl<Product> productDsl = new ProductDsl<>(getSelectProduct(), filter);
     List<ProductRes> products = productDsl.getDsl()
-        .orderBy(product.createdAt.desc())
+        .orderBy(getOrderBy(pageable.getSort()))
         .offset(pageable.getOffset())
         .limit(pageable.getPageSize())
         .fetch()
         .stream()
         .map(ProductRes::of)
-        .collect(Collectors.toList());
+        .toList();
 
     ProductDsl<Long> countDsl = new ProductDsl<>(getSelectProductCount(), filter);
 
@@ -45,5 +47,21 @@ public class ProductRepositoryImpl implements CustomProductRepository {
 
   private JPAQuery<Long> getSelectProductCount() {
     return queryFactory.select(product.count());
+  }
+
+  private OrderSpecifier<?>[] getOrderBy(Sort orders) {
+    List<OrderSpecifier<?>> orderSpecifiers = new ArrayList<>();
+    if (orders.isSorted()) {
+      for (Sort.Order order : orders) {
+        if (order.getProperty().equals("price")) {
+          orderSpecifiers.add(order.isAscending() ? product.price.asc() : product.price.desc());
+        }
+        if (order.getProperty().equals("title")) {
+          orderSpecifiers.add(order.isAscending() ? product.title.asc() : product.title.desc());
+        }
+      }
+    }
+    orderSpecifiers.add(product.id.desc());
+    return orderSpecifiers.toArray(new OrderSpecifier[0]);
   }
 }
